--- a/config.properties
+++ b/config.properties
@@ -27,9 +27,11 @@ banned.players=config/ban_list.txt
 # VAC or game bans.
 whitelist.players=config/whitelist.txt
 
+#Whether to automatically kick players with a VAC ban
+# Note you MUST supply a steam API key to use this
+kick.vac.banned=true
 
+# Steam API key. You may obtain one from steam at this url:
+# https://steamcommunity.com/dev/apikey
 
-
-
-
-
+steam.api.key=YOUR_KEY_HERE
