--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,11 @@
 	    <artifactId>commons-lang3</artifactId>
 	    <version>3.11</version>
 	</dependency>
+    <dependency>
+        <groupId>org.apache.httpcomponents</groupId>
+        <artifactId>fluent-hc</artifactId>
+        <version>4.5.12</version>
+    </dependency>
   </dependencies>
 
   <build>
