Allow option to apply game bans as well as VAC bans

--- a/config.properties
+++ b/config.properties
@@ -31,6 +31,10 @@ whitelist.players=config/whitelist.txt
 # Note you MUST supply a steam API key to use this
 kick.vac.banned=true
 
+#Whether to automatically kick players with a Game ban
+# Note you MUST supply a steam API key to use this
+kick.game.banned=false
+
 # Steam API key. You may obtain one from steam at this url:
 # https://steamcommunity.com/dev/apikey
 
