Add first cut of a GUI. Refactor all logging so can be interoperable with GUI.

--- a/pom.xml
+++ b/pom.xml
@@ -9,8 +9,7 @@
   <version>0.0.1-SNAPSHOT</version>
 
   <name>se4</name>
-  <!-- FIXME change it to the project's website -->
-  <url>http://www.example.com</url>
+  <url>https://github.com/peterwalkley/SE4AdminTool</url>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
