Code cleanup from intellij

--- a/pom.xml
+++ b/pom.xml
@@ -107,6 +107,19 @@
           <artifactId>maven-shade-plugin</artifactId>
           <version>3.2.4</version>
         </plugin>
+          <plugin>
+              <groupId>com.github.spotbugs</groupId>
+              <artifactId>spotbugs-maven-plugin</artifactId>
+              <version>4.0.4</version>
+              <dependencies>
+                  <!-- overwrite dependency on spotbugs if you want to specify the version of spotbugs -->
+                  <dependency>
+                      <groupId>com.github.spotbugs</groupId>
+                      <artifactId>spotbugs</artifactId>
+                      <version>4.1.2</version>
+                  </dependency>
+              </dependencies>
+          </plugin>
       </plugins>
     </pluginManagement>
 	<finalName>SE4AdminTool</finalName>
@@ -133,6 +146,6 @@
 				</execution>
 			</executions>
 		</plugin>
-	</plugins>
+    </plugins>
   </build>
 </project>
