Add IPStack support Have GUI save window settings on exit and re-use on startup Show steam and IP stack on/off state in server log Add plain zipfile distro Improve readme documentation Provide startup batch file for command-line mode Tidy server pane

--- a/config.properties
+++ b/config.properties
@@ -38,4 +38,12 @@ kick.game.banned=false
 # Steam API key. You may obtain one from steam at this url:
 # https://steamcommunity.com/dev/apikey
 
-steam.api.key=YOUR_KEY_HERE
+#steam.api.key=YOUR_KEY_HERE
+
+# OPTIONAL API key for IPStack.  Obtain one from https://ipstack.com/product
+# A free key should be more than enough.
+# If you omit the API key, then IP address lookup to location will be
+# disabled.
+
+#ipstack.api.key=YOUR_KEY_HERE
+
