Code layout tidy. Close profile management. Coloured text in log window.

--- a/config.properties
+++ b/config.properties
@@ -47,3 +47,12 @@ kick.game.banned=false
 
 #ipstack.api.key=YOUR_KEY_HERE
 
+# Policy for dealing with closed profiles. Acceptable values are:
+# 0 - Do nothing
+# 1 - Display a warning to the player
+# 2 - Display a warning and then kick the player
+closed.profile.policy=1
+
+# Message to be displayed if closed profile policy 1 or 2 is in use.
+closed.profile.message=Hello #PlayerName#. Please open your steam profile. We prefer open profiles on this server.
+#closed.profile.message=Hello #PlayerName#. This server does not accept players with closed profiles, please open it. You will be removed shortly.
