Move to release versioning from pre-release Display game countdown timer on GUI. Update IP stack logging to show location in log file. Update example config to default values that work when no steam API key is present. Don't treat using steam facilities without a steam key as an error, just switch them off Add an online check for later version being available. Show version number on window title Add hyperlink to website on main window.

--- a/config.properties
+++ b/config.properties
@@ -29,7 +29,7 @@ whitelist.players=config/whitelist.txt
 
 # Whether to automatically kick players with a VAC ban
 # Note you MUST supply a steam API key to use this
-kick.vac.banned=true
+kick.vac.banned=false
 
 #Whether to automatically kick players with a Game ban
 # Note you MUST supply a steam API key to use this
@@ -51,7 +51,7 @@ kick.game.banned=false
 # 0 - Do nothing
 # 1 - Display a warning to the player
 # 2 - Display a warning and then kick the player
-closed.profile.policy=1
+closed.profile.policy=0
 
 # Message to be displayed if closed profile policy 1 or 2 is in use.
 closed.profile.message=Hello #PlayerName#. Please open your steam profile. We prefer open profiles on this server.
