Update names of example files provided so that new installs don't overwrite any local changes. Update code to create missing files, cloning from examples if possible. Update version of installer packagers. Add this year into copyright.

--- a/config.properties
+++ b/config.properties
@@ -1,3 +1,9 @@
+#
+# IMPORTANT: Make a copy of this file for each server you wish to manage.
+# Do not use this file as it will be overwritten when updating the tool
+# with newer versions
+#
+
 # Server hostname or IP address
 server.host = 1.2.3.4
 
@@ -14,17 +20,21 @@ server.password = secret
 player.greeting=Welcome #PlayerName# to #ServerName# server. Play nice.
 
 # Reference to file containing list of IP addresses to ban.
-# The file must exist, but its contents may be empty
+# The file must exist, but its contents may be empty.
+# An example is provided in the config directory.
 banned.ip=config/ip_bans.txt
 
 # Reference to file containing list of player details to ban.
 # The file must exist, but its contents may be empty
+# You will need to create your own file.
+# An example is provided in the config directory.
 banned.players=config/ban_list.txt
 
 # Reference to file containing list of whitelisted players.
 # The file must exist, but its contents may be empty.
 # Players on the whitelist will not be checked for steam
 # VAC or game bans.
+# An example is provided in the config directory.
 whitelist.players=config/whitelist.txt
 
 # Whether to automatically kick players with a VAC ban
