Add facility to limit play hours of those joining. Request from MateiSim so a server for new players can be set up.

--- a/config.properties
+++ b/config.properties
@@ -66,3 +66,8 @@ closed.profile.policy=0
 # Message to be displayed if closed profile policy 1 or 2 is in use.
 closed.profile.message=Hello #PlayerName#. Please open your steam profile. We prefer open profiles on this server.
 #closed.profile.message=Hello #PlayerName#. This server does not accept players with closed profiles, please open it. You will be removed shortly.
+
+# OPTIONAL limit on player experience.  If a player has more play hours, or their play hours are not visible
+# via steam, then they will be kicked from the server.
+#maximum.playhours=100
+
