Add support for extreme IP in place of IP stack. Update release to 1.4

--- a/config.properties
+++ b/config.properties
@@ -50,12 +50,20 @@ kick.game.banned=false
 
 #steam.api.key=YOUR_KEY_HERE
 
+# OPTIONAL API key for extreme IP.  Obtain one from https://extreme-ip-lookup.com/
+# and then signing up for the free package.  The free service allows 10,000
+# requests per month.
+#extremeip.api.key=YOUR KEY HERE
+
 # OPTIONAL API key for IPStack.  Obtain one from https://ipstack.com/product
-# A free key should be more than enough.
-# If you omit the API key, then IP address lookup to location will be
+# This setting is now only for legacy use following IP stack reducing their
+# free service from 10,000 requests a month down to 100.  Use extreme IP
+# instead.
+#ipstack.api.key=YOUR_KEY_HERE
+
+# If you omit API keys for extreme IP and IP stack then location look ups are
 # disabled.
 
-#ipstack.api.key=YOUR_KEY_HERE
 
 # Policy for dealing with closed profiles. Acceptable values are:
 # 0 - Do nothing
