--- a/config.properties
+++ b/config.properties
@@ -53,16 +53,8 @@ kick.game.banned=false
 # OPTIONAL API key for extreme IP.  Obtain one from https://extreme-ip-lookup.com/
 # and then signing up for the free package.  The free service allows 10,000
 # requests per month.
+# If you omit a key then IP address location lookups are disabled.
 #extremeip.api.key=YOUR KEY HERE
-
-# OPTIONAL API key for IPStack.  Obtain one from https://ipstack.com/product
-# This setting is now only for legacy use following IP stack reducing their
-# free service from 10,000 requests a month down to 100.  Use extreme IP
-# instead.
-#ipstack.api.key=YOUR_KEY_HERE
-
-# If you omit API keys for extreme IP and IP stack then location look ups are
-# disabled.
 
 
 # Policy for dealing with closed profiles. Acceptable values are:
