--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
   <groupId>tfa</groupId>
   <artifactId>se4</artifactId>
-  <version>1.4</version>
+  <version>1.5</version>
 
   <name>TFA SE4 Administrator</name>
   <url>https://github.com/peterwalkley/SE4AdminTool</url>
@@ -20,12 +20,6 @@
 
   <dependencies>
     <dependency>
-		<groupId>junit</groupId>
-		<artifactId>junit</artifactId>
-		<version>4.13.1</version>
-		<scope>test</scope>
-    </dependency>
-    <dependency>
     	<groupId>javax.websocket</groupId>
     	<artifactId>javax.websocket-api</artifactId>
     	<version>1.1</version>
@@ -33,32 +27,32 @@
 	<dependency>
         <groupId>org.eclipse.jetty.websocket</groupId>
         <artifactId>websocket-client</artifactId>
-        <version>9.4.31.v20200723</version>
+        <version>9.4.43.v20210629</version>
     </dependency>
 	<dependency>
 		<groupId>org.slf4j</groupId>
 		<artifactId>slf4j-simple</artifactId>
-		<version>1.7.25</version>
+		<version>1.7.32</version>
 	</dependency>
 	<dependency>
 		<groupId>com.fasterxml.jackson.core</groupId>
 		<artifactId>jackson-databind</artifactId>
-		<version>2.11.2</version>
+		<version>2.13.0</version>
 	</dependency>
 	<dependency>
 	    <groupId>commons-io</groupId>
 	    <artifactId>commons-io</artifactId>
-	    <version>2.7</version>
+	    <version>2.11.0</version>
 	</dependency>
 	<dependency>
 	    <groupId>org.apache.commons</groupId>
 	    <artifactId>commons-lang3</artifactId>
-	    <version>3.11</version>
+	    <version>3.12.0</version>
 	</dependency>
     <dependency>
         <groupId>org.apache.httpcomponents</groupId>
         <artifactId>fluent-hc</artifactId>
-        <version>4.5.12</version>
+        <version>4.5.13</version>
     </dependency>
   </dependencies>
 
@@ -194,7 +188,7 @@
                                     <mainClass>tfa.se4.gui.SE4AdminGUI</mainClass>
                                     <bundleJre>true</bundleJre>
                                     <customizedJre>false</customizedJre>
-                                    <jrePath>F:\JRE1.8</jrePath>
+                                    <jrePath>C:\jdk1.8.0_231\jre</jrePath>
                                     <copyDependencies>true</copyDependencies>
                                     <generateInstaller>true</generateInstaller>
                                     <createZipball>false</createZipball>
@@ -233,7 +227,7 @@
                                     <mainClass>tfa.se4.gui.SE4AdminGUI</mainClass>
                                     <bundleJre>true</bundleJre>
                                     <customizedJre>false</customizedJre>
-                                    <jrePath>F:\JRE1.8</jrePath>
+                                    <jrePath>C:\jdk1.8.0_231\jre</jrePath>
                                     <copyDependencies>true</copyDependencies>
                                     <generateInstaller>false</generateInstaller>
                                     <createZipball>true</createZipball>
