--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,11 @@
 	    <artifactId>commons-lang3</artifactId>
 	    <version>3.12.0</version>
 	</dependency>
+      <dependency>
+          <groupId>org.apache.commons</groupId>
+          <artifactId>commons-text</artifactId>
+          <version>1.9</version>
+      </dependency>
     <dependency>
         <groupId>org.apache.httpcomponents</groupId>
         <artifactId>fluent-hc</artifactId>
