--- a/pom.xml
+++ b/pom.xml
@@ -37,22 +37,22 @@
 	<dependency>
 		<groupId>com.fasterxml.jackson.core</groupId>
 		<artifactId>jackson-databind</artifactId>
-		<version>2.14.0-rc1</version>
+		<version>2.17.0</version>
 	</dependency>
 	<dependency>
 	    <groupId>commons-io</groupId>
 	    <artifactId>commons-io</artifactId>
-	    <version>2.12.0</version>
+	    <version>2.16.1</version>
 	</dependency>
 	<dependency>
 	    <groupId>org.apache.commons</groupId>
 	    <artifactId>commons-lang3</artifactId>
-	    <version>3.12.0</version>
+	    <version>3.15.0</version>
 	</dependency>
       <dependency>
           <groupId>org.apache.commons</groupId>
           <artifactId>commons-text</artifactId>
-          <version>1.10.0</version>
+          <version>1.11.0</version>
       </dependency>
     <dependency>
         <groupId>org.apache.httpcomponents</groupId>
@@ -165,6 +165,13 @@
 		</plugin>
     </plugins>
   </build>
+    <repositories>
+        <repository>
+            <id>maven_central</id>
+            <name>Maven Central</name>
+            <url>https://repo.maven.apache.org/maven2/</url>
+        </repository>
+    </repositories>
     <profiles>
         <profile>
             <id>installer-build</id>
